section small fixes

--- a/src/scss/components/_using-advantages.scss
+++ b/src/scss/components/_using-advantages.scss
@@ -7,7 +7,7 @@
   &__title {
     @include screen-l {
       position: absolute;
-      right: 0;
+      right: 25px;
     }
   }
   &__list {
