--- a/src/scss/sections/_product-description.scss
+++ b/src/scss/sections/_product-description.scss
@@ -93,7 +93,7 @@
     }
     @include screen-l {
       background-color: #f9f9f9;
-      width: 600px;
+      width: 650px;
       bottom: 0px;
       right: 0px;
     }
